--- a/StoreLogicLibrary/StoreLogicLibrary.csproj
+++ b/StoreLogicLibrary/StoreLogicLibrary.csproj
@@ -30,9 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,11 +51,67 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerProduct.cs" />
-    <Compile Include="Product.cs" />
+    <Compile Include="mymodel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>mymodel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="mymodel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>mymodel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="mymodel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>mymodel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Order.cs">
+      <DependentUpon>mymodel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Product.cs">
+      <DependentUpon>mymodel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Product2.cs" />
+    <Compile Include="ProductOrder.cs">
+      <DependentUpon>mymodel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Store.cs">
+      <DependentUpon>mymodel.tt</DependentUpon>
+    </Compile>
     <Compile Include="StoreLogicRepository.cs" />
     <Compile Include="StoreLogicService.cs" />
     <Compile Include="StoreProduct.cs" />
+    <Compile Include="User.cs">
+      <DependentUpon>mymodel.tt</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <EntityDeploy Include="mymodel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>mymodel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="mymodel.edmx.diagram">
+      <DependentUpon>mymodel.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="mymodel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>mymodel.edmx</DependentUpon>
+      <LastGenOutput>mymodel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="mymodel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>mymodel.edmx</DependentUpon>
+      <LastGenOutput>mymodel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
