--- a/StoreLogicLibrary/StoreLogicLibrary.csproj
+++ b/StoreLogicLibrary/StoreLogicLibrary.csproj
@@ -33,12 +33,18 @@
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\..\Linq2Entities\packages\EntityFramework.6.3.0-preview6-19304-03\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServerCompact">
+      <HintPath>..\..\Linq2Entities\packages\EntityFramework.SqlServerCompact.6.3.0-preview6-19304-03\lib\net45\EntityFramework.SqlServerCompact.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SqlClient">
+      <HintPath>..\packages\System.Data.SqlClient.4.4.0\lib\net451\System.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
@@ -51,67 +57,67 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerProduct.cs" />
-    <Compile Include="mymodel.Context.cs">
+    <Compile Include="model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>mymodel.Context.tt</DependentUpon>
+      <DependentUpon>model.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="mymodel.cs">
+    <Compile Include="model.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>mymodel.tt</DependentUpon>
+      <DependentUpon>model.tt</DependentUpon>
     </Compile>
-    <Compile Include="mymodel.Designer.cs">
+    <Compile Include="model.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>mymodel.edmx</DependentUpon>
+      <DependentUpon>model.edmx</DependentUpon>
     </Compile>
     <Compile Include="Order.cs">
-      <DependentUpon>mymodel.tt</DependentUpon>
+      <DependentUpon>model.tt</DependentUpon>
     </Compile>
     <Compile Include="Product.cs">
-      <DependentUpon>mymodel.tt</DependentUpon>
+      <DependentUpon>model.tt</DependentUpon>
     </Compile>
     <Compile Include="Product2.cs" />
-    <Compile Include="ProductOrder.cs">
-      <DependentUpon>mymodel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Store.cs">
-      <DependentUpon>mymodel.tt</DependentUpon>
+      <DependentUpon>model.tt</DependentUpon>
     </Compile>
     <Compile Include="StoreLogicRepository.cs" />
     <Compile Include="StoreLogicService.cs" />
     <Compile Include="StoreProduct.cs" />
     <Compile Include="User.cs">
-      <DependentUpon>mymodel.tt</DependentUpon>
+      <DependentUpon>model.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <EntityDeploy Include="mymodel.edmx">
+    <EntityDeploy Include="model.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>mymodel.Designer.cs</LastGenOutput>
+      <LastGenOutput>model.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="mymodel.edmx.diagram">
-      <DependentUpon>mymodel.edmx</DependentUpon>
+    <None Include="App.Config" />
+    <None Include="model.edmx.diagram">
+      <DependentUpon>model.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="mymodel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>mymodel.edmx</DependentUpon>
-      <LastGenOutput>mymodel.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="mymodel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>mymodel.edmx</DependentUpon>
-      <LastGenOutput>mymodel.cs</LastGenOutput>
-    </Content>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>model.edmx</DependentUpon>
+      <LastGenOutput>model.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>model.edmx</DependentUpon>
+      <LastGenOutput>model.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
